# code-helper

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile.crew_api  Dockerfile.ingest  Dockerfile.runner  README.md  docker-compose.yml  pyproject.toml
chat_ui/: README.md  app.js  index.html
cli/: __init__.py  main.py
crew_api/: __init__.py  app.py  chat.py  config.py  ingest_job.py  logging_config.py  runner_client.py
crew_api/crew/: __init__.py  agents.py  crew.py  tasks.py
crew_api/crew/tools/: __init__.py  rag_tool.py  runner_tool.py  search_tool.py  stubs.py
docs/: CONFIG.md  FAILURE-MODES.md  RUNBOOK.md  STATE.md
docs/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
ingest/: __init__.py  chunk.py  config.py  embed.py  run.py  vector_store.py
k8s/: README.md  configmap.yaml  crew-api-deployment.yaml  ingest-job.yaml  ingress.yaml  namespace.yaml  runner-deployment.yaml  services.yaml  vector-db-deployment.yaml
runner/: __init__.py  app.py  config.py  logging_config.py
tests/: test_crew_api_chat.py  test_crew_api_health.py  test_crew_api_ingest_job.py  test_crew_api_project.py  test_crew_api_run.py  test_crew_crew.py  test_ingest_chunk.py  test_ingest_run.py  test_ingest_vector_store.py  test_rag_tool.py  test_runner.py  test_runner_tool.py  test_search_tool.py
