[project]
name = "code-helper"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "crewai>=0.80",
  "chromadb>=0.5",
  "httpx>=0.27",
  "pydantic>=2",
  "pydantic-settings>=2",
  "kubernetes>=31",
  "structlog>=24.1",
  "tenacity>=9.0",
]
[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
[project.scripts]
code-helper = "cli.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["runner", "ingest", "crew_api", "cli"]
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
